TAGS – fix overflow when numerous tags

--- a/src/css-backend/table.styl
+++ b/src/css-backend/table.styl
@@ -212,6 +212,7 @@ $panel-gutter = 20px
 
   &__listWrapper {
     height: 310px;
+    overflow: auto;
     margin: 0;
   }
 
